--- a/02_ES6-And-TypeScript/index.html
+++ b/02_ES6-And-TypeScript/index.html
@@ -10,5 +10,6 @@
 <body>
     <script src="let.js"></script>
     <!--<script src="const.js"></script>-->
+    <script src="templateStrings.js"></script>
 </body>
 </html>
