complete 'Fat Arrow Functions'

--- a/02_ES6-And-TypeScript/index.html
+++ b/02_ES6-And-TypeScript/index.html
@@ -8,8 +8,9 @@
     <title>ES6 and TypeScript Lessons</title>
 </head>
 <body>
-    <script src="let.js"></script>
+    <!--<script src="let.js"></script>-->
     <!--<script src="const.js"></script>-->
-    <script src="templateStrings.js"></script>
+    <!--<script src="templateStrings.js"></script>-->
+    <script src="fatArrowFunc.js"></script>
 </body>
 </html>
