--- a/02_ES6-And-TypeScript/index.html
+++ b/02_ES6-And-TypeScript/index.html
@@ -11,6 +11,7 @@
     <!--<script src="let.js"></script>-->
     <!--<script src="const.js"></script>-->
     <!--<script src="templateStrings.js"></script>-->
-    <script src="fatArrowFunc.js"></script>
+    <!--<script src="fatArrowFunc.js"></script>-->
+    <script src="destructuring.js"></script>
 </body>
 </html>
