complete 'For Of'

--- a/02_ES6-And-TypeScript/index.html
+++ b/02_ES6-And-TypeScript/index.html
@@ -12,6 +12,7 @@
     <!--<script src="const.js"></script>-->
     <!--<script src="templateStrings.js"></script>-->
     <!--<script src="fatArrowFunc.js"></script>-->
-    <script src="destructuring.js"></script>
+    <!--<script src="destructuring.js"></script>-->
+    <script src="forOf.js"></script>
 </body>
 </html>
