complete 'Map & Set'

--- a/02_ES6-And-TypeScript/index.html
+++ b/02_ES6-And-TypeScript/index.html
@@ -13,6 +13,7 @@
     <!--<script src="templateStrings.js"></script>-->
     <!--<script src="fatArrowFunc.js"></script>-->
     <!--<script src="destructuring.js"></script>-->
-    <script src="forOf.js"></script>
+    <!--<script src="forOf.js"></script>-->
+    <script src="mapAndSet.js"></script>
 </body>
 </html>
