--- a/02_ES6-And-TypeScript/index.html
+++ b/02_ES6-And-TypeScript/index.html
@@ -14,6 +14,7 @@
     <!--<script src="fatArrowFunc.js"></script>-->
     <!--<script src="destructuring.js"></script>-->
     <!--<script src="forOf.js"></script>-->
-    <script src="mapAndSet.js"></script>
+    <!--<script src="mapAndSet.js"></script>-->
+    <script src="promises.js"></script>
 </body>
 </html>
